--- a/templates/solrconfig-4.2.1.xml.j2
+++ b/templates/solrconfig-4.2.1.xml.j2
@@ -87,6 +87,8 @@
 {% endif %}
 {% if solr_repli_pollinterval is defined %}
             <str name="pollInterval">{{ solr_repli_pollinterval|default('00:00:5') }}</str>
+{% else %}
+            <str name="pollInterval">00:00:5</str>
 {% endif %}
          </lst>
     </requestHandler>
